[package]
name = "port-scanner"
version = "0.1.0"
authors = ["Hirokiii <t1310352.hiroki.kaminaga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.26.0"
rayon = "1.3.1"
log = "0.4.8"
env_logger = "0.7.1"
failure = "0.1.8"